# Air-earth

./: README.md
.github/workflows/: terraform.yml
backend/: pyproject.toml
terraform/: main.tf  setup.sh
